--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,23 @@
   html {
     font-family: Roboto, system-ui, sans-serif;
   }
+  input[type="text"] {
+    outline:none;
+    border:none;
+  }
 }
 
 @layer utilities {
-    /* @variants responsive { */
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
-
-      /* Hide scrollbar for IE, Edge and Firefox */
-      .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-      }
-    /* } */
+  /* @variants responsive { */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  /* } */
+}
